git-annex (5.20150618) UNRELEASED; urgency=medium

  * log: Fix reversion introduced in version 5.20150528 that broke this command.

 -- Joey Hess <id@joeyh.name>  Thu, 02 Jul 2015 12:31:14 -0400

git-annex (5.20150617) unstable; urgency=medium

  * Now supports git annex sync --all --content to sync all versions of all
    files with all repos that want them.
  * Added new "anything" preferred content expression, which matches all
    versions of all files.
  * Standard preferred content for client, backup, incremental backup,
    and unwanted groups have been adjusted to work better when used
    with git annex sync --all --content.
  * fromkey, registerurl: Improve handling of urls that happen to also
    be parsable as strange keys.
  * sync, remotedaemon: Pass configured ssh-options even when
    annex.sshcaching is disabled.
  * assistant: Consume systemd-networkd dbus events to learn about
    changes to network connections, as was already done with
    network-manager and wicd.
    Thanks to Sebastian Reuße for the patches.
  * get --incomplete: New option to resume any interrupted downloads.
  * dead --key: Can be used to mark a key as dead.
  * fsck: Ignore keys that are known to be dead when running in
    --all/--unused/--key mode or a in a bare repo. Closes: #753888
    Otherwise, still reports files with lost contents, even if the content
    is dead.
  * S3: Special remotes can be configured with public=yes to allow
    the public to access the bucket's content.
  * S3: Publically accessible buckets can be used without creds.
  * import --clean-duplicates: Fix bug that didn't count local or trusted
    repo's copy of a file as one of the necessary copies to allow removing
    it from the import location.
  * tahoe: Use ~/.tahoe-git-annex/ rather than ~/.tahoe/git-annex/
    when setting up a tahoe special remote to avoid old versions of
    tahoe create-client choking.
  * Fix bug that prevented enumerating locally present objects in repos